    Thanks to Nicolas François <nicolas.francois@centraliens.net>.
  * Update LGPL to 2.1 and fix FSF address in debian/copyright.
  * Change Build-Depends to 'libreadline5-dev | libreadline-dev' from
    'libreadline4-dev'.
  * Fix bashisms in bochs.config and bochs.postinst.
  * Added missing angle to email address in sb16ctrl.1.
  * Install sb16ctl.1 in the binary.

 -- Guillem Jover <guillem@debian.org>  Fri,  5 Aug 2005 04:32:06 +0300

bochs (2.2.1-1) unstable; urgency=low

  * New Upstream Release.
    - debian/patches/00_base.patch: Synced.
    - debian/patches/01_doc.patch: Likewise.
    - debian/patches/02_libtool.patch: Likewise.
    - debian/patches/03_gcc-4.0.patch: Likewise.
    - debian/patches/04_no_pcibios_init.patch: Removed.
    - Fix ">>PANIC<< prefetch: RIP > CS.limit". (Closes: #162785, #288766)
    - Fix TUN/TAP network interface. (Closes: #268422)
  * Added Vietnamese debconf translation. (Closes: #313170)
    Thanks to Clytie Siddall <clytie@riverland.net.au>.
  * Fix typos in the bochsrc man page. (Closes: #310359)
    - debian/patches/01_doc.patch: Update.
    Thanks to A Costa <agcosta@gis.net>.
  * Enable the pseudo NIC interface to be used with EtherBoot and document
    the addition in the README.Debian file.
    Thanks to Robert Millan <rmh@aybabtu.com> for the pointer.
  * Cosmetic cleaning of README.Debian.
  * Provide a symlinked manpage for bochs-bin.
  * Add a man page for sb16ctrl.
  * Explicitly state architectures and stop using type-handling.
  * Replace aalib1-dev Build-Depends with libaa1-dev.
  * Replace xlibs-dev Build-Depends with the fain grained only ones
    needed: libx11-dev, libxpm-dev, libice-dev, libsm-dev.
  * Tighten dependencies on bochsbios and vgabios. (Closes: #290188)
  * Do not use a stamp file for configure.
  * Add Debian Subversion repository URL.
  * Update copyright year.
  * Update watch file to version 3 (no changes needed).
  * Now using Standards-Version 3.6.2 (no changes needed).