@@ -3,16 +3,26 @@
 mount / -o rw,remount
 export PATH=/usr/X11R6/bin:$PATH
 
-while true ; do
+while true
+do
   echo -n "
  - Run [B]ochs
  - Run [S]hell
  - [R]eboot
 Choose an option: "
-  read tmp
-  case $tmp in
-    B|b) startx `which bochs-bin` -qf /etc/bochs-init/bochsrc ;;
-    S|s) login ;;
-    R|r) sync ; mount / -o ro,remount ; reboot ;;
+  read
+  case $REPLY in
+    B|b)
+      startx $(which bochs-bin) -qf /etc/bochs-init/bochsrc
+    ;;
+    S|s)
+      login
+    ;;
+    R|r)
+      sync
+      mount / -o ro,remount
+      reboot
+    ;;
   esac
 done
+
